# practice_numerical_calculation

./: .gitignore  LICENSE  README.md  pyproject.toml  test_sph.py  test_sph_init.py
.github/: copilot-instructions.md
sec_01/: __init__.py  __main__.py  about.md  doc.md  run_all.py
sec_01/benchmarks/: __init__.py
sec_01/benchmarks/B01_plate_hole_static/: B01_BEM_solver.py  B01_FDM_solver.py  B01_FEM_solver.py  B01_animate_results.py  B01_common_cfg.yaml  B01_plot_results.py  B01_post_metrics.py  B01_run_all.py  __init__.py
sec_01/benchmarks/B02_dambreak_column_dynamic/: B02_DEM_solver.py  B02_FEM_solver.py  B02_FVM_solver.py  B02_SPH_solver.py  B02_animate_results.py  B02_animate_sideview.py  B02_common_cfg.yaml  B02_plot_results.py  B02_post_metrics.py  B02_right_wall_scan.py  B02_run_all.py  B02_sph_param_sweep.py  __init__.py
sec_01/docs/: doc.md  expalin01.md  explain02.md
sec_01/outputs/B01/: B01_BEM_result.json  B01_FDM_result.json  B01_FEM_result.json  B01_metrics.csv
sec_01/outputs/B02/: B02_DEM_result.json  B02_FEM_result.json  B02_FVM_result.json  B02_SPH_result.json  B02_metrics.csv
sec_01/outputs/B02/sweeps/: B02_right_wall_scan.csv
sec_01/shared/: __init__.py  animation_encode.py  gpu_backend.py  io.py  runtime.py  visualization.py
sec_02/2.1/1/: fem_plane_strain_compare.py
sec_02/2.1/2/: fem_plane_stress_beam.py
sec_02/2.3/: fem_babuska_paradox_beam.py
sec_02/2.3/docs/: explain.md
sec_02/2.3/outputs/: comparison_metrics.csv  nodal_displacement_Qa.csv  nodal_displacement_Qb.csv  results_Qa.npz  results_Qb.npz
(+10 files in other folders)
